# hyperspec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/hyperspec/: Cargo.toml
crates/hyperspec/src/: cube.rs  error.rs  lib.rs  linalg.rs
crates/hyperspec/src/algorithms/: continuum.rs  derivative.rs  indices.rs  mnf.rs  mod.rs  normalize.rs  pca.rs  resample.rs  sam.rs  smooth.rs  stats.rs
crates/hyperspec/src/io/: envi.rs  mod.rs  zarr.rs
pyo3-hyperspec/: Cargo.toml
pyo3-hyperspec/python/hyperspec/: __init__.py  __init__.pyi
pyo3-hyperspec/src/: lib.rs
tests/: test_hyperspec.py
