[package]
name = "pyo3-hyperspec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast hyperspectral processing for remote sensing and machine learning (Python bindings)"

[lib]
name = "_hyperspec"
crate-type = ["cdylib"]

[dependencies]
hyperspec = { version = "0.8.0", path = "../crates/hyperspec" }
ndarray = { workspace = true }
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }
