[package]
name = "hyperspec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast hyperspectral data processing for remote sensing and ML pipelines"

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
zarrs = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
